# EpicFight-Docs

./: .readthedocs.yaml  README.md  crowdin.yml  mkdocs.yml  pyproject.toml  requirements-qa.txt  requirements.txt
.cache/plugin/git-committers/: page-authors.json
docs/: custom_script.html  index.en.md  index.es.md  index.hr.md  index.ja.md  index.ko.md  index.md  index.pl.md  index.pt.md  index.ru.md  index.uk.md  index.zh.md  requirements.txt
docs/API/: Migration.en.md  Starting.en.md  Utilities.en.md
docs/Armor/: 3Darmor_page1.en.md  3Darmor_page1.es.md  3Darmor_page1.hr.md  3Darmor_page1.ja.md  3Darmor_page1.ko.md  3Darmor_page1.pl.md  3Darmor_page1.pt.md  3Darmor_page1.ru.md  3Darmor_page1.uk.md  3Darmor_page1.zh.md  3Darmor_page2.en.md  3Darmor_page2.es.md  3Darmor_page2.hr.md  3Darmor_page2.ja.md  3Darmor_page2.ko.md  3Darmor_page2.pl.md  3Darmor_page2.pt.md  3Darmor_page2.ru.md  3Darmor_page2.uk.md  3Darmor_page2.zh.md  3Darmor_page3.en.md
docs/Compatibilities/: kubejs.en.md
docs/Guides/: page1.en.md  page1.es.md  page1.ja.md  page1.pl.md  page1.pt.md  page1.ru.md  page1.uk.md  page1.zh.md  page2.en.md  page2.es.md  page2.ko.md  page2.pt.md  page2.uk.md  page3.en.md  page3.es.md  page3.pt.md  page4.en.md  page4.pt.md  skills.en.md
docs/Guides/Armor/: 3Darmor_page1.es.md  3Darmor_page1.hr.md  3Darmor_page1.ja.md  3Darmor_page1.pl.md  3Darmor_page1.ru.md  3Darmor_page1.uk.md  3Darmor_page1.zh.md  3Darmor_page2.hr.md  3Darmor_page2.ja.md  3Darmor_page2.pl.md
docs/Guides/Entities/: page1.en.md  page1.es.md  page1.ja.md  page1.ko.md  page1.pl.md  page1.pt.md  page1.ru.md  page1.uk.md  page1.zh.md  page2.en.md
docs/Guides/Weapons/: page1.en.md  page1.es.md  page1.ja.md  page1.ko.md  page1.pl.md  page1.pt.md  page1.ru.md  page1.uk.md  page1.zh.md  page2.en.md  page3.en.md  page3.pt.md  page4.en.md
docs/Misc/: commands.en.md  credits.en.md  recipes.en.md  skills.en.md
docs/Misc/Gameplay/: enchantments.en.md  index.en.md  recipes.en.md  skills.en.md
docs/armor/: page1.md
docs/guides/: page1.md  page2.md
docs/stylesheets/extra_css/: extra.css  roundimages.css  skeleton-container.css
overrides/: home.html  main.html
overrides/hooks/: shortcodes.py
overrides/partials/: mycontent.html
site/: 404.html  hooks.py  index.html  requirements.txt  sitemap.xml
site/API/Migration/: index.html
site/API/Starting/: index.html
site/Armor/: 3Darmor_page1.html  3Darmor_page2.html
site/Armor/3Darmor_page1/: index.html
site/Armor/3Darmor_page2/: index.html
site/Armor/3Darmor_page3/: index.html
site/Guides/: page1.html  page2.html  page3.html  page4.html
site/Guides/page1/: index.html
site/Guides/page2/: index.html
site/Guides/page3/: index.html
site/Guides/page4/: index.html
site/Misc/: commands.html  credits.html  recipes.html  skills.html
site/Misc/Gameplay/: index.html
site/Misc/credits/: index.html
site/es/: index.html
site/hr/: index.html
site/ja/: index.html
site/javascripts/: extra.js
site/ko/: index.html
site/pl/: index.html
site/pt/: index.html
site/ru/: index.html
site/search/: search_index.json
site/uk/: index.html
site/zh/: index.html
(+270 files in other folders)
