[tool.poetry]
name = "my-package"
version = "0.1.0"
description = "The description of the package"

license = "MIT"

authors = [
    "Sébastien Eustace <sebastien@eustace.io>"
]

repository = "https://github.com/python-poetry/poetry"
homepage = "https://python-poetry.org"

# README file(s) are used as the package description
readme = ["README.md", "LICENSE"]

# Keywords (translated to tags on the package index)
keywords = ["packaging", "poetry"]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
ipython = "^8.8.0"
levenshtein = ">=0.21.1,<0.24.0"
matplotlib = "^3.6.3"
openpyxl = "^3.1.2"
pandas = "^2.0.0"
pillow = ">=9.5,<11.0"
scikit-image = ">=0.21,<0.23"
scikit-learn = "^1.2.0"
seaborn = "^0.13.0"

# Dependency groups are supported for organizing your dependencies
[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0"

# ...and can be installed only when explicitly requested
[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
lxml = "4.9.4"
mkdocs = "1.5.3"
mkdocs-material = "9.5.2"
mkdocs-static-i18n = "1.2.0"
mkdocs-git-revision-date-localized-plugin = "1.2.2"
mkdocs-git-committers-plugin-2 = "2.2.2"
Markdown = "3.3.7"
imagesize = "1.4.1"
docutils = "0.18.1"
Babel = "2.12.1"
cairosvg = "2.7.1"

# Python-style entrypoints and scripts are easily expressed
[tool.poetry.scripts]
my-script = "my_package:main"